add variable url frontend mejorado